frontend/src/App.css
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

li {
  float: left;
}

li a {
  display: block;
  padding: 8px;
}
.full-width {
  height: 46px;
  width: 100%;
  background-color: darkblue;
}

.header {
  width: 100%;
  height: 240px;
}
.header-one {
  width: 90%;
  height: 70px;
  margin-top: 20px;
  margin-left: 55px;
  position: relative;
}

.header-two {
  width: 90%;
  height: 100px;
  margin-top: 20px;
  margin-left: 55px;
}

label,
img,
button,
input {
  margin-left: 10px;
}

.collapse {
  width: 90%;
  height: 240px;
  margin-top: 20px;
  margin-left: 55px;
}

.collapse-header {
  width: 100%;
  height: 40px;
  background-color: darkblue;
  position: relative;
}

.collapse-header-date {
  width: 50%;
  height: 35px;
}

.collapse-header-total {
  width: 29.5%;
  height: 35px;
}

.collapse-header-button {
  width: 20%;
  height: 35px;
}

.collapse-table {
  width: 95%;
  height: 150px;
  margin-top: 20px;
  margin-left: 30px;
  padding-top: 20px;
}

.collapse-expansion {
  height: 200px;
  background-color: #e5e4e2;
  margin-top: -20px;
}

td,
th {
  border: 1px solid grey;
  text-align: left;
  padding: 8px;
}

table {
  font-family: arial, sans-serif;
  border-collapse: collapse;
  width: 100%;
}

